2010-01-08  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        WebGL canvas paints background color twice
        https://bugs.webkit.org/show_bug.cgi?id=33361
        
        New testcases for various kinds of "directly composited" elements: images, video, WebGL,
        with background colors.

        * compositing/images/direct-image-background-color.html: Added.
        * compositing/reflections/simple-composited-reflections.html: Added.
        * compositing/video/video-background-color.html: Added.
        * compositing/webgl/webgl-background-color.html: Added.
        * compositing/webgl/webgl-blending.html: Added.
        * platform/mac/compositing/images/direct-image-background-color-expected.txt: Added.
        * platform/mac/compositing/video/video-background-color-expected.txt: Added.
        * platform/mac/compositing/webgl/webgl-background-color-expected.txt: Added.

2010-01-08  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Passing array that is too large to set method of WebGLArrays does not throw an exception
        https://bugs.webkit.org/show_bug.cgi?id=33352

        Added needed range checks to JSC and V8 custom bindings. Expanded
        preexisting test suite for WebGLArrays and updated its expected
        results. Tested in WebKit and Chromium.

        * fast/canvas/webgl/array-set-out-of-bounds-expected.txt: Added.
        * fast/canvas/webgl/array-set-out-of-bounds.html: Added.
        * fast/canvas/webgl/array-unit-tests-expected.txt:
        * fast/canvas/webgl/array-unit-tests.html:

2010-01-08  Eric Seidel  <eric@webkit.org>

        Reviewed by Alexey Proskuryakov.

        http/tests/xmlhttprequest/logout.html failed on Tiger Bot
        https://bugs.webkit.org/show_bug.cgi?id=31412

        * platform/mac-tiger/Skipped: After talking with Alexey, we're just gonna skip the failing test on Tiger.

2010-01-08  Alexey Proskuryakov  <ap@apple.com>
