@@ -1,193 +1,0 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script id="vshader" type="x-shader/x-vertex">
-        attribute vec4 vPosition;
-        void main()
-        {
-            gl_Position = vPosition;
-        }
-    </script>
-
-    <script id="fshader" type="x-shader/x-fragment">
-        void main()
-        {
-            gl_FragColor = vec4(1.0, 0.0, 0.0, 0.5);
-        }
-    </script>
-
-    <script>
-        function initWebGL(canvasName, vshader, fshader, attribs, clearColor, clearDepth)
-        {
-            var canvas = document.getElementById(canvasName);
-            var gl = canvas.getContext("experimental-webgl");
-            if (!gl) {
-                alert("No WebGL context found");
-                return null;
-            }
-
-            // Add a console
-            gl.console = ("console" in window) ? window.console : { log: function() { } };
-
-            // create our shaders
-            var vertexShader = loadShader(gl, vshader);
-            var fragmentShader = loadShader(gl, fshader);
-
-            if (!vertexShader || !fragmentShader)
-                return null;
-
-            // Create the program object
-            gl.program = gl.createProgram();
-
-            if (!gl.program)
-                return null;
-
-            // Attach our two shaders to the program
-            gl.attachShader (gl.program, vertexShader);
-            gl.attachShader (gl.program, fragmentShader);
-
-            // Bind attributes
-            for (var i in attribs)
-                gl.bindAttribLocation (gl.program, i, attribs[i]);
-
-            // Link the program
-            gl.linkProgram(gl.program);
-
-            // Check the link status
-            var linked = gl.getProgramParameter(gl.program, gl.LINK_STATUS);
-            if (!linked) {
-                // something went wrong with the link
-                var error = gl.getProgramInfoLog (gl.program);
-                gl.console.log("Error in program linking:"+error);
-
-                gl.deleteProgram(gl.program);
-                gl.deleteProgram(fragmentShader);
-                gl.deleteProgram(vertexShader);
-
-                return null;
-            }
-
-            gl.useProgram(gl.program);
-
-            gl.clearColor(clearColor[0], clearColor[1], clearColor[2], clearColor[3]);
-            gl.clearDepth(clearDepth);
-
-            gl.enable(gl.DEPTH_TEST);
-            gl.enable(gl.BLEND);
-            gl.blendFunc(gl.SRC_ALPHA, gl.ONE);
-
-            return gl;
-        }
-
-        //
-        // loadShader
-        //
-        // 'shaderId' is the id of a <script> element containing the shader source string.
-        // Load this shader and return the WebGLShader object corresponding to it.
-        //
-        function loadShader(ctx, shaderId)
-        {
-            var shaderScript = document.getElementById(shaderId);
-            if (!shaderScript) {
-                ctx.console.log("*** Error: shader script '"+shaderId+"' not found");
-                return null;
-            }
-
-            if (shaderScript.type == "x-shader/x-vertex")
-                var shaderType = ctx.VERTEX_SHADER;
-            else if (shaderScript.type == "x-shader/x-fragment")
-                var shaderType = ctx.FRAGMENT_SHADER;
-            else {
-                ctx.console.log("*** Error: shader script '"+shaderId+"' of undefined type '"+shaderScript.type+"'");
-                return null;
-            }
-
-            // Create the shader object
-            var shader = ctx.createShader(shaderType);
-            if (shader == null) {
-                ctx.console.log("*** Error: unable to create shader '"+shaderId+"'");       
-                return null;
-            }
-
-            // Load the shader source
-            ctx.shaderSource(shader, shaderScript.text);
-
-            // Compile the shader
-            ctx.compileShader(shader);
-
-            // Check the compile status
-            var compiled = ctx.getShaderParameter(shader, ctx.COMPILE_STATUS);
-            if (!compiled) {
-                // Something went wrong during compilation; get the error
-                var error = ctx.getShaderInfoLog(shader);
-                ctx.console.log("*** Error compiling shader '"+shaderId+"':"+error);
-                ctx.deleteShader(shader);
-                return null;
-            }
-
-            return shader;
-        }
-    
-        function init()
-        {
-            var gl = initWebGL("canvas", "vshader", "fshader", [ "vPosition"], [ 1, 0, 0, 0.5 ], 1);
-            gl.viewport(0, 0, 200, 200);
-            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-            
-            // var vertexObject = gl.createBuffer();
-            // gl.bindBuffer(gl.ARRAY_BUFFER, vertexObject);
-            // gl.bufferData(gl.ARRAY_BUFFER, new WebGLFloatArray([ 0,0.5,0, -0.5,-0.5,0, 0.5,-0.5,0 ]), gl.STATIC_DRAW);
-            // gl.enableVertexAttribArray(0);
-            // gl.vertexAttribPointer(0, 3, gl.FLOAT, false, 0, 0);
-            // 
-            // gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-            // gl.drawArrays(gl.TRIANGLES, 0, 3);
-
-            // gl = initWebGL("right", "vshader", "fshader", [ "vPosition"], [ 0, 0, 1, 0.5 ], 1);
-            // gl.viewport(0, 0, 200, 200);
-            // 
-            // var vertexObject = gl.createBuffer();
-            // gl.bindBuffer(gl.ARRAY_BUFFER, vertexObject);
-            // gl.bufferData(gl.ARRAY_BUFFER, new WebGLFloatArray([ 0,0.5,0, -0.5,-0.5,0, 0.5,-0.5,0 ]), gl.STATIC_DRAW);
-            // gl.enableVertexAttribArray(0);
-            // gl.vertexAttribPointer(0, 3, gl.FLOAT, false, 0, 0);
-            // 
-            // gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-            // gl.drawArrays(gl.TRIANGLES, 0, 3);
-       }
-    </script>
-    <style type="text/css" media="screen">
-      .box {
-        display: inline-block;
-        margin: 20px;
-        width: 200px;
-        height: 200px;
-      }
-
-      .indicator {
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 75px;
-        background-color: green;
-        border-top: 75px solid blue;
-        border-bottom: 75px solid yellow;
-      }
-      
-      canvas {
-        background-color: rgba(255, 0, 0, 0.5);
-      }
-      
-      .compare {
-        background-color: rgba(255, 0, 0, 0.5);
-      }
-    </style>
-  </head>
-  <body onload="init()">
-   
-    <div class="indicator"></div>
-
-    <canvas class="box" id="canvas" style="left: 20px" width="200" height="200"></canvas>
-    <div class="box compare"></div>
-  </body>
-</html>
